# ping_and_monitoring_app

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: greetings.yml
.github/workflows/: codeql.yml
app/: main.py
app/api/: ping.py
app/lib/: common.py  config.py  logger.py
app/schemas/: ping.py
app/templates/: base.html  footer.html  header.html  index.html
app/templates/ping/: ping_form.html
static/css/: styles.css
static/js/: scripts.js
tests/: test_ping.py
