[tool.poetry]
name = "ping-and-monitoring-app"
version = "0.1.0"
description = "This project is designed to ping APIs at regular intervals to ensure their uptime and functionality. It is an open-source project, and contributions are welcome to help improve its features."
authors = ["Austin Noronha <austin_noronha@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.4"
pytest = "^8.3.3"
ruff = "^0.6.7"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.0"
ruff = "^0.6.7"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 88  # Set the maximum line length (similar to black or flake8)
target-version = "py39"  # Target Python version

[tool.ruff.per-file-ignores]
# Ignore specific rules in certain files or directories
"tests/*" = ["F401"]  # Ignore unused imports in tests

# Enable specific rules or exclusions (optional)
# Uncomment and customize based on your project needs
# select = ["E", "F", "I", "N", "A"]
# ignore = []

[tool.poetry.scripts]
ruff-lint = "ruff:check ."
ruff-fix = "ruff:fix ."